<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_N2_STATES" Id="{6aba8840-fea4-46b2-ba43-941d50e9b4a0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_N2_STATES :
(
	STATE1,
	STATE2,
	STATE3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>