<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_PURGE_N2_STATUS" Id="{683405b5-0825-46f5-b393-c557986e4ebc}">
    <Declaration><![CDATA[TYPE TYP_PURGE_N2_STATUS :
STRUCT
	Done : BOOL;
	Executing: BOOL;
	Error : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>